# SeamlessCoopExtension

./: .gitignore  NoDeader.vcxproj.filters  README.md  dllmain.cpp
dll project/: ModUtils.h  NoDeader.vcxproj  NoDeader.vcxproj.filters  PointerChain.h  WorldChrMan.cpp  WorldChrMan.h  dllmain.cpp
dll project/x64/Debug/: NoDeader.dll.recipe  NoDeader.ilk  NoDeader.vcxproj.FileListAbsolute.txt  (+3 more)
dllscripting main- clion/maincoopextension/: CMakeLists.txt  EventFlag.cpp  GameFunctions.cpp  GameFunctions.h  ModFunctions.cpp  ModFunctions.h  WorldChrMan.cpp  WorldChrMan.h  damageHook.cpp  damageHook.h  dllmain.cpp  signature.cpp
dllscripting- clion branch/maincoopextension/: GameFunctions.cpp  GameFunctions.h  ModUtils.h  Signature.h  WorldChrMan.cpp  damageHook.h
dllscripting- visual studio branch/visual studio dll scripting/: GameFunctions.cpp  NoDeader.sln  PointerChain.h  dllmain.cpp
dllscripting/dll project/: EventFlag.cpp  EventFlag.h  GameFunctions.cpp  GameFunctions.h  NoDeader.vcxproj  NoDeader.vcxproj.filters  Signature.h  WorldChrMan.cpp  WorldChrMan.h  dllmain.cpp
modengine/: project.json  regulation.bin.prev
modengine/event/: common.emevd.dcx  common.emevd.dcx.bak  common.emevd.dcx.js  m60_42_36_00.emevd.dcx  m60_42_36_00.emevd.dcx.bak  m60_42_36_00.emevd.dcx.js
old- cheat engine proof of concepts/: actuallyusefulheaderfiles.h  ce fake death script.txt
old- visual studio dllscripting/visual studio dll scripting/: EventFlag.h  GameFunctions.h  NoDeader.vcxproj  WorldChrMan.cpp
x64/Debug/: NoDeader.ilk  NoDeader.vcxproj.FileListAbsolute.txt
(+361 files in other folders)
